<?xml version="1.0"?>
<package format="2">
  <name>trig_functions</name>
  <version>0.0.0</version>
  <description>Makes turtle bot draw trig functions.</description>

  <maintainer email="bausanomichal@gmail.com">Michael Bausano</maintainer>

  <license>MIT</license>

  <url type="repo"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>
</package>
