<?xml version="1.0"?>
<package format="2">
  <name>rosty_mathematician</name>
  <version>1.0.0</version>
  <description>Tutorial package for turtlebot_sim. This subscriber attempts to render given function of x.</description>

  <maintainer email="bausanomichal@gmail.com">Michael Bausano</maintainer>

  <license>MIT</license>

  <url type="repo"></url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
